--- a/app/src/main/res/layout/ab_main.xml
+++ b/app/src/main/res/layout/ab_main.xml
@@ -5,15 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="70dp">
 
+    <ImageView
+        android:id="@+id/img_appbar_back"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="10dp"
+        android:visibility="gone"
+        android:src="@drawable/backspace_black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_appbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_appbar_back"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="페이지 이름" />
 
