--- a/app/src/main/res/layout/item_left_start_text_chat_room.xml
+++ b/app/src/main/res/layout/item_left_start_text_chat_room.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_chat_room">
+    android:id="@+id/item_left_start_text_chat_room">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_chat_room_image_container"
+        android:id="@+id/layout_left_start_text_chat_room_image_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -20,7 +20,7 @@
         >
 
         <ImageView
-            android:id="@+id/iv_chat_room_user_img"
+            android:id="@+id/iv_left_start_text_chat_room_user_img"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:padding="4dp"
@@ -36,18 +36,18 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_chat_room_text_container"
+        android:id="@+id/layout_left_start_text_chat_room_text_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/layout_chat_room_image_container"
+        app:layout_constraintStart_toEndOf="@id/layout_left_start_text_chat_room_image_container"
         android:layout_marginBottom="5dp"
         >
 
         <TextView
-            android:id="@+id/tv_chat_room_user_name"
+            android:id="@+id/tv_left_start_text_chat_room_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="김현국"
@@ -59,22 +59,22 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_chat_room_message_space"
+            android:id="@+id/layout_left_start_text_chat_room_message_space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_chat_room_user_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_left_start_text_chat_room_user_name"
             >
             <TextView
-                android:id="@+id/tv_chat_room_message"
+                android:id="@+id/tv_left_start_text_chat_room_message"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/bg_chat_room_left_item"
                 android:maxWidth="200dp"
+                android:padding="6dp"
                 tools:text="가나다라마바사아가나다라마바사아가나다라마바사아가나다라마바사아가나다라마바사아"
-                android:singleLine="false"
                 android:textColor="@color/black"
                 android:textSize="10dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -83,27 +83,27 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/tv_chat_room_user_count"
+            android:id="@+id/tv_left_start_text_chat_room_user_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="2"
             android:textColor="@color/flame_blue"
             android:textSize="7dp"
-            app:layout_constraintStart_toEndOf="@id/layout_chat_room_message_space"
-            app:layout_constraintBottom_toTopOf="@id/tv_chat_room_list_date"
+            app:layout_constraintStart_toEndOf="@id/layout_left_start_text_chat_room_message_space"
+            app:layout_constraintBottom_toTopOf="@id/tv_left_start_text_chat_room_list_date"
             android:layout_marginBottom="2dp"
             android:layout_marginStart="2dp"
             />
 
 
         <TextView
-            android:id="@+id/tv_chat_room_list_date"
+            android:id="@+id/tv_left_start_text_chat_room_list_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             tools:text="오전 09시 30분"
             android:textSize="10dp"
-            app:layout_constraintStart_toEndOf="@id/layout_chat_room_message_space"
+            app:layout_constraintStart_toEndOf="@id/layout_left_start_text_chat_room_message_space"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="2dp"
              />
